--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -1,6 +1,4 @@
-<div class="eqLogic eqLogic-widget col2" data-eqLogic_id="#id#" data-eqType="#eqType#" data-version="#version#"
-	data-eqLogic_uid="#uid#" data-translate-category="#translate_category#" data-category="#category#"
-	data-tags="#tags#" style="#style#;">
+<div class="eqLogic eqLogic-widget col2" data-eqLogic_id="#id#" data-eqType="#eqType#" data-version="#version#" data-eqLogic_uid="#uid#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="#style#;">
 	<span class="cmd refresh pull-right">
 		<span id="iconCron#id#"></span>
 		<script>
@@ -100,8 +98,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #Mem_display#;">
-			<span title="Mémoire vive (% libre) || Date valeur : #Mem_value# || Date collecte : #Mem_collect#"
-				class="fa techno-memory" style="width:15px;"></span>
+			<span title="Mémoire Vive (% Libre) || Date valeur : #Mem_value# || Date collecte : #Mem_collect#" class="fa techno-memory" style="width:15px;"></span>
 			<span id="Mempourcent#id#"></span>
 		</div>
 		<script>
@@ -120,8 +117,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #Mem_swap_display#;">
-			<span title="Mémoire Swap (% libre) || Date valeur : #Mem_swap_value# || Date collecte : #Mem_swap_collect#"
-				class="fas fa-list" style="width:15px;"></span>
+			<span title="Mémoire Swap (% Libre) || Date valeur : #Mem_swap_value# || Date collecte : #Mem_swap_collect#" class="fas fa-list" style="width:15px;"></span>
 			<span id="Swappourc#id#"></span>
 		</div>
 		<script>
@@ -140,9 +136,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #ethernet0_display#;">
-			<span
-				title="Trafic réseau (#ethernet0_name# / #ethernet0_ip#) || Date valeur : #ethernet0_value# || Date collecte : #ethernet0_collect#"
-				class="fa techno-fleches" style="width:15px;"></span>
+			<span title="Trafic Réseau (#ethernet0_name# / #ethernet0_ip#) || Date valeur : #ethernet0_value# || Date collecte : #ethernet0_collect#" class="fa techno-fleches" style="width:15px;"></span>
 			<span id="ethernet0#id#"></span>
 		</div>
 		<script>
@@ -151,9 +145,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #hddused_display#;">
-			<span
-				title="Espace disque (% utilisé) || Date valeur : #hddtotal_value# || Date collecte : #hddtotal_collect#"
-				class="fas fa-hdd" style="width:15px;"></span>
+			<span title="Espace disque (% utilisé) || Date valeur : #hddtotal_value# || Date collecte : #hddtotal_collect#" class="fas fa-hdd" style="width:15px;"></span>
 			<span id="hddpourcused#id#"></span>
 		</div>
 		<script>
@@ -175,7 +167,7 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#synovolume2_display#' == 'OK') {
-					$('#synovol2#id#').append('<div id="synovol2#id#" class="cmd tooltips" style="margin-left:5px;display: #hddusedv2_display#;"><span title="Espace disque Volume 2 Syno (% utilisé) || Date valeur : #hddtotalv2_value# || Date collecte : #hddtotalv2_collect#" class="fas fa-hdd" style="width:15px;"></span> <span id="hddpourcusedv2#id#"></span></div>');
+					$('#synovol2#id#').append('<div id="synovol2#id#" class="cmd tooltips" style="margin-left:5px;display: #hddusedv2_display#;"><span title="Syno Volume 2 (% utilisé) || Date valeur : #hddtotalv2_value# || Date collecte : #hddtotalv2_collect#" class="fas fa-hdd" style="width:15px;"></span> <span id="hddpourcusedv2#id#"></span></div>');
 				}
 				if ('#hddpourcusedv2#' === '') {
 					$('#hddpourcusedv2#id#').append('<span></span>');
@@ -194,7 +186,7 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#synovolumeusb_display#' == 'OK') {
-					$('#synovolusb#id#').append('<div id="synovolusb#id#" class="cmd tooltips" style="margin-left:5px;display: #hddusedusb_display#;"><span title="Espace disque Volume USB Syno (% utilisé) || Date valeur : #hddtotalusb_value# || Date collecte : #hddtotalusb_collect#" class="fab fa-usb" style="width:15px;"></span> <span id="hddpourcusedusb#id#"></span></div>');
+					$('#synovolusb#id#').append('<div id="synovolusb#id#" class="cmd tooltips" style="margin-left:5px;display: #hddusedusb_display#;"><span title="Syno Volume USB (% utilisé) || Date valeur : #hddtotalusb_value# || Date collecte : #hddtotalusb_collect#" class="fab fa-usb" style="width:15px;"></span> <span id="hddpourcusedusb#id#"></span></div>');
 				}
 				if ('#hddpourcusedusb#' === '') {
 					$('#hddpourcusedusb#id#').append('<span></span>');
@@ -213,7 +205,7 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#synovolumeesata_display#' == 'OK') {
-					$('#synovolesata#id#').append('<div id="synovolesata#id#" class="cmd tooltips" style="margin-left:5px;display: #hddusedesata_display#;"><span title="Espace disque Volume eSATA Syno (% utilisé) || Date valeur : #hddtotalesata_value# || Date collecte : #hddtotalesata_collect#" class="fas fa-hdd" style="width:15px;"></span> <span id="hddpourcusedesata#id#"></span></div>');
+					$('#synovolesata#id#').append('<div id="synovolesata#id#" class="cmd tooltips" style="margin-left:5px;display: #hddusedesata_display#;"><span title="Syno Volume eSATA (% utilisé) || Date valeur : #hddtotalesata_value# || Date collecte : #hddtotalesata_collect#" class="fas fa-hdd" style="width:15px;"></span> <span id="hddpourcusedesata#id#"></span></div>');
 				}
 				if ('#hddpourcusedesata#' === '') {
 					$('#hddpourcusedesata#id#').append('<span></span>');
@@ -229,9 +221,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #cpu_display#;">
-			<span
-				title="Nombre CPU, fréquence (température) || Date valeur : #cpu_value# || Date collecte : #cpu_collect#"
-				class="fa techno-pc" style="width:15px;"></span>
+			<span title="Nombre CPU - Fréquence (Température) || Date valeur : #cpu_value# || Date collecte : #cpu_collect#" class="fa techno-pc" style="width:15px;"></span>
 			<span id="cpu#id#"></span><span id="cpu_temp#id#"></span>
 		</div>
 		<script>
@@ -256,8 +246,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #perso1_display#;">
-			<span title="#perso1_name# || Date valeur : #perso1_value# || Date collecte : #perso1_collect#"
-				style="width:15px;">#perso1_icon#</span>
+			<span title="#perso1_name# || Date valeur : #perso1_value# || Date collecte : #perso1_collect#" style="width:15px;">#perso1_icon#</span>
 			<span id="perso1_unite#id#"></span>
 		</div>
 		<script>
@@ -278,8 +267,7 @@
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #perso2_display#;">
-			<span title="#perso2_name# || Date valeur : #perso2_value# || Date collecte : #perso2_collect#"
-				style="width:15px;">#perso2_icon#</span>
+			<span title="#perso2_name# || Date valeur : #perso2_value# || Date collecte : #perso2_collect#" style="width:15px;">#perso2_icon#</span>
 			<span id="perso2_unite#id#"></span>
 		</div>
 		<script>
