--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -33,23 +33,19 @@
 				<a class="action" style="cursor: pointer;"><i class="fas fa-power-off" style="padding-left:5px;"></i></a>
 				<script>
 					document.querySelector('.poweroff[data-cmd_id="#cmd_poweroff_id#"] .action')?.addEventListener('click', function () {
-						bootbox.confirm('Etes-vous sûr de vouloir éteindre l\'équipement #name# ?', function (result) {
-							if (result) {
-								jeedom.cmd.execute({ id: '#cmd_poweroff_id#' });
-							}
-						});
+						if (confirm("Etes-vous sûr de vouloir éteindre l\'équipement #name# ?")) {
+							jeedom.cmd.execute({ id: '#cmd_poweroff_id#' });
+						}
 					});
 				</script>
 			</span>
 			<span title="Redémarrer l'équipement" class="reboot tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_reboot_id#" style="float: right;display: #cmd_reboot_display#;">
 				<a class="action" style="cursor: pointer;"><i class="fas fa-redo" style="padding-left:5px;"></i></a>
 				<script>
-					document.querySelector('.reboot[data-cmd_id="#cmd_reboot_id#"] .action')?.addEventListener('click', function () {
-						bootbox.confirm('Etes-vous sûr de vouloir redémarrer l\'équipement #name# ?', function (result) {
-							if (result) {
-								jeedom.cmd.execute({ id: '#cmd_reboot_id#' });
-							}
-						});
+					document.querySelector('.reboot[data-cmd_id="#cmd_reboot_id#"] .action').addEventListener('click', function () {
+						if (confirm("Etes-vous sûr de vouloir redémarrer l\'équipement #name# ?")) {
+							jeedom.cmd.execute({ id: '#cmd_reboot_id#' });
+						}
 					});
 				</script>
 			</span>
