--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -33,9 +33,9 @@
 				<a class="action" style="cursor: pointer;"><i class="fas fa-power-off" style="padding-left:5px;"></i></a>
 				<script>
 					document.querySelector('.poweroff[data-cmd_id="#cmd_poweroff_id#"] .action')?.addEventListener('click', function () {
-						if (confirm("Etes-vous sûr de vouloir éteindre l\'équipement #name# ?")) {
+						jeeDialog.confirm("Etes-vous sûr de vouloir éteindre l'équipement #name# ?", function () {
 							jeedom.cmd.execute({ id: '#cmd_poweroff_id#' });
-						}
+						});
 					});
 				</script>
 			</span>
@@ -43,9 +43,9 @@
 				<a class="action" style="cursor: pointer;"><i class="fas fa-redo" style="padding-left:5px;"></i></a>
 				<script>
 					document.querySelector('.reboot[data-cmd_id="#cmd_reboot_id#"] .action').addEventListener('click', function () {
-						if (confirm("Etes-vous sûr de vouloir redémarrer l\'équipement #name# ?")) {
+						jeeDialog.confirm("Etes-vous sûr de vouloir redémarrer l'équipement #name# ?", function () {
 							jeedom.cmd.execute({ id: '#cmd_reboot_id#' });
-						}
+						});
 					});
 				</script>
 			</span>
