--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -31,15 +31,15 @@
 			<script>
 				document.querySelector('.poweroff[data-cmd_id="#cmd_poweroff_id#"] .action').addEventListener('click', function () {
 					jeeDialog.confirm({
-						title: '<i class="success fas fa-check-circle"></i> {{Eteindre l\'équipement}}',
-						message: '{{Etes-vous sûr de vouloir éteindre l\'équipement}} #name# ?',
+						title: '<i class="info fas fa-question-circle"></i> Eteindre l\'équipement',
+						message: 'Etes-vous sûr de vouloir éteindre l\'équipement #name# ?',
 						buttons: {
 							confirm: {
-								label: '{{Eteindre}}',
+								label: 'Eteindre',
 								className: 'success'
 							},
 							cancel: {
-								label: '{{Annuler}}',
+								label: 'Annuler',
 								className: 'info'
 							}
 						},
@@ -57,15 +57,15 @@
 			<script>
 				document.querySelector('.reboot[data-cmd_id="#cmd_reboot_id#"] .action').addEventListener('click', function () {
 					jeeDialog.confirm({
-						title: '<i class="success fas fa-check-circle"></i> {{Redémarrer l\'équipement}}',
-						message: '{{Etes-vous sûr de vouloir redémarrer l\'équipement}} #name# ?',
+						title: '<i class="info fas fa-question-circle"></i> Redémarrer l\'équipement',
+						message: 'Etes-vous sûr de vouloir redémarrer l\'équipement #name# ?',
 						buttons: {
 							confirm: {
-								label: '{{Redémarrer}}',
+								label: 'Redémarrer',
 								className: 'success'
 							},
 							cancel: {
-								label: '{{Annuler}}',
+								label: 'Annuler',
 								className: 'info'
 							}
 						},
